--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       {
         "command": "bje.revealrange",
         "title": "Reveal Error Range"
+      },
+      {
+        "command": "bje.installModule",
+        "title": "Install Missing Module"
       }
     ],
     "notebookOutputRenderer": [
